# sensor-fusion-for-localization-and-mapping

./: README.md  待问问题.md
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/: AUTHORS  CMakeLists.txt  Makefile.in  Makefile.mk  NEWS  aclocal.m4  configure  configure.ac
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/cmake/: CMakeLists.txt  Makefile.in  project-config-version.cmake.in  project-config.cmake.in
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/doc/: GeographicLib.dox.in  Makefile.in  Makefile.mk  NETGeographicLib.dox  doxyfile-c.in  doxyfile-for.in  doxyfile-net.in  doxyfile.in  geodesic-c.dox  geodesic-for.dox
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/dotnet/NETGeographicLib/: AlbersEqualArea.cpp  AlbersEqualArea.h  AzimuthalEquidistant.cpp  AzimuthalEquidistant.h  CMakeLists.txt  CassiniSoldner.cpp  CassiniSoldner.h  Ellipsoid.cpp  Ellipsoid.h  EllipticFunction.h  GARS.h  GeoCoords.cpp  GeoCoords.h  Geocentric.cpp  Geocentric.h  Geodesic.cpp  Geodesic.h  GeodesicExact.cpp  GeodesicExact.h  GeodesicLine.cpp  GeodesicLine.h  GeodesicLineExact.cpp  GeodesicLineExact.h  Geoid.cpp  Geoid.h  Georef.h  Gnomonic.cpp  Gnomonic.h  GravityCircle.cpp  GravityCircle.h  GravityModel.cpp  GravityModel.h  LambertConformalConic.cpp  LambertConformalConic.h  LocalCartesian.cpp  LocalCartesian.h  MGRS.cpp  MGRS.h  MagneticCircle.cpp  MagneticCircle.h  (+20 more)
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/dotnet/Projections/: AlbersPanel.Designer.cs  AlbersPanel.cs  EllipsoidPanel.Designer.cs  EllipsoidPanel.cs  GeocentricPanel.Designer.cs  GeocentricPanel.cs  GeodesicPanel.Designer.cs  GeodesicPanel.cs  GeoidPanel.Designer.cs  GeoidPanel.cs  GravityPanel.cs  LocalCartesianPanel.Designer.cs  LocalCartesianPanel.cs  PolarStereoPanel.Designer.cs  PolarStereoPanel.cs  PolyPanel.Designer.cs  PolyPanel.cs  ProjectionsPanel.Designer.cs  ProjectionsPanel.cs  RhumbPanel.cs
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/examples/: CMakeLists.txt  JacobiConformal.hpp  Makefile.in  example-GeodesicLine.cpp  example-Geoid.cpp  example-GravityCircle.cpp  example-GravityModel.cpp  example-MagneticCircle.cpp  example-MagneticModel.cpp
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/include/: Makefile.in  Makefile.mk
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/include/GeographicLib/: AlbersEqualArea.hpp  Config.h  EllipticFunction.hpp  GARS.hpp  Geocentric.hpp  Geoid.hpp  Georef.hpp  GravityModel.hpp  MGRS.hpp  MagneticCircle.hpp  MagneticModel.hpp  PolygonArea.hpp  Rhumb.hpp  SphericalHarmonic.hpp  SphericalHarmonic1.hpp  SphericalHarmonic2.hpp  UTMUPS.hpp  (+1 more)
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/java/: pom.xml
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/js/: CMakeLists.txt  GeographicLib.md  Makefile.am  Makefile.in  Makefile.mk  conf.json
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/man/: CartConvert.1  CartConvert.usage  ConicProj.1  ConicProj.usage  GeoConvert.1  GeoConvert.usage  GeodSolve.1  GeodSolve.pod  GeodSolve.usage  GeodesicProj.1  GeodesicProj.usage  GeoidEval.1  GeoidEval.pod  GeoidEval.usage  Gravity.1  Gravity.pod  Gravity.usage  MagneticField.1  MagneticField.1.html  MagneticField.pod  MagneticField.usage  Makefile.in  Makefile.mk  Planimeter.1  Planimeter.1.html  Planimeter.pod  Planimeter.usage  RhumbSolve.1  RhumbSolve.usage  TransverseMercatorProj.1  TransverseMercatorProj.pod  TransverseMercatorProj.usage
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/matlab/: Makefile.am  Makefile.in
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/maxima/: auxlat.mac  geodesic.mac
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/python/: Makefile.am  Makefile.in  README.md  setup.py
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/src/: AlbersEqualArea.cpp  CMakeLists.txt  GeodesicExact.cpp  MGRS.cpp  MagneticCircle.cpp  MagneticModel.cpp  Makefile.in  Makefile.mk  NormalGravity.cpp  Rhumb.cpp
第一章 概述/lidar_localization/third_part/GeographicLib-1.52/tools/: CMakeLists.txt  GeodSolve.cpp  Gravity.cpp  MagneticField.cpp  Makefile.in  Makefile.mk  Planimeter.cpp  geographiclib-get-geoids.sh  geographiclib-get-gravity.sh  geographiclib-get-magnetic.sh  tests.cmake
第二章 3D激光里程计/lidar_localization/: CMakeLists.txt  package.xml
第二章 3D激光里程计/lidar_localization/config/front_end/: config.yaml
第二章 3D激光里程计/lidar_localization/include/lidar_localization/front_end/: front_end.hpp
第二章 3D激光里程计/lidar_localization/slam_data/trajectory/: ground_truth.txt  laser_odom.txt
第二章 3D激光里程计/lidar_localization/src/: front_end_node.cpp
第二章 3D激光里程计/lidar_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
第二章 3D激光里程计/lidar_localization/src/models/registration/: icp_registration.cpp  icp_svd_registration.cpp  ndt_registration.cpp
第二章 3D激光里程计/陈梓杰 ndt_cpu/lidar_localization/: CMakeLists.txt  show_time.py
第二章 3D激光里程计/陈梓杰 ndt_cpu/lidar_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
第十章 基于优化的定位方法/课程框架/src/lidar_localization/: .gitignore  CMakeLists.txt
第十章 基于优化的定位方法/课程框架/src/lidar_localization/cmake/: sophus.cmake
第十章 基于优化的定位方法/课程框架/src/lidar_localization/rviz/: eskf_analysis.rviz
第四章 点云地图构建及基于地图的定位/lidar_localization/: .gitignore  CMakeLists.txt
第四章 点云地图构建及基于地图的定位/lidar_localization/config/mapping/: back_end.yaml
第四章 点云地图构建及基于地图的定位/lidar_localization/config/matching/: matching.yaml
第四章 点云地图构建及基于地图的定位/lidar_localization/src/data_pretreat/: data_pretreat_flow.cpp
第四章 点云地图构建及基于地图的定位/lidar_localization/src/mapping/back_end/: back_end.cpp  back_end_flow.cpp
第四章 点云地图构建及基于地图的定位/lidar_localization/src/mapping/viewer/: viewer.cpp
第四章 点云地图构建及基于地图的定位/lidar_localization/src/matching/: matching.cpp  matching_flow.cpp
第四章 点云地图构建及基于地图的定位/lidar_localization/src/models/scan_context_manager/: key_frames.pb.cpp  ring_keys.pb.cpp  scan_contexts.pb.cpp
第四章 点云地图构建及基于地图的定位/lidar_localization/src/sensor_data/: gnss_data.cpp  imu_data.cpp  velocity_data.cpp
第四章 点云地图构建及基于地图的定位/lidar_localization/src/subscriber/: imu_subscriber.cpp
(+796 files in other folders)
